# icg_filter

./: .gitignore  CMakeLists.txt  README.md  a.json  resources.qrc
lib/about/: CMakeLists.txt  about.cpp  about.ui
lib/common/: CMakeLists.txt  Convolution.cpp  Convolution.hpp  MedianFinder.cpp  MedianFinder.h  e_filter.hpp  fileprocessor.cpp  fileprocessor.hpp  i_factory.hpp  i_filter.hpp  imageprocessor.cpp  imageprocessor.hpp  state.cpp  state.hpp
lib/components/: CMakeLists.txt  WeightMatrix.cpp  WeightMatrix.hpp
lib/configwidget/: CMakeLists.txt  configwidget.cpp  configwidget.hpp  configwidget.ui
lib/filters/: CMakeLists.txt  dithering_utils.hpp  filters.cpp  filters.hpp
lib/filters/procs/: idlefilter.hpp  sepia_filter.hpp
lib/filters/procs/FloydSteinbergFilter/: FloydSteinbergFilter.cpp  FloydSteinbergFilter.hpp
lib/filters/procs/alpha/: alpha.cpp  alpha.hpp
lib/filters/procs/anglyph/: anaglyph.cpp  anaglyph.hpp
lib/filters/procs/aqua/: aquarel.cpp  aquarel.hpp
lib/filters/procs/black_white/: black_white_filter.cpp  black_white_filter.hpp
lib/filters/procs/blur/: blur.cpp  blur.hpp
lib/filters/procs/bw_floyd/: floyd.cpp  floyd.hpp
lib/filters/procs/bw_ordered_dithering/: bw_od.cpp  bw_od.hpp
lib/filters/procs/emboss/: emboss.cpp  emboss.hpp
lib/filters/procs/gamma/: gamma.cpp  gamma.hpp
lib/filters/procs/inversion/: inversion.cpp  inversion.hpp
lib/filters/procs/mirror/: mirror.cpp  mirror.hpp
lib/filters/procs/ordered_dithering/: OrderedDitheringFilter.cpp  OrderedDitheringFilter.hpp
lib/filters/procs/roberts/: RobertsFilter.cpp  RobertsFilter.hpp
lib/filters/procs/rotate/: rotate.cpp  rotate.hpp
lib/filters/procs/sepia/: sepia_filter.cpp  sepia_filter.hpp
lib/filters/procs/sharp/: sharpness.cpp  sharpness.hpp
lib/filters/procs/sobel/: SobelsFilter.cpp  SobelsFilter.hpp
lib/help/: CMakeLists.txt  help.ui
lib/imagepainter/: CMakeLists.txt  imagepainter.cpp  imagepainter.hpp  imagepainter.ui
lib/imageview/: CMakeLists.txt  imageview.cpp  imageview.hpp  imageview.ui
lib/mainwindow/: CMakeLists.txt  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
lib/signalcontroller/: CMakeLists.txt  filtersettings.hpp  signalcontroller.cpp  signalcontroller.hpp
lib/spinslider/: spinslider.cpp  spinslider.hpp
lib/worker/: CMakeLists.txt  processing_worker.cpp  processing_worker.hpp
qml/: brightness.qml  contrast.qml
qml/components/: ColorSelect.qml  ComboBox.qml  ImagePicker.qml  SliderSpinBox.qml  SliderSpinBoxF.qml  WeightMatrix.qml  qmldir
qml/filters/: BWFloydSteinbergFilter.qml  FloydSteinbergFilter.qml  alpha.qml  anaglyph.qml  aquarel.qml  black_white.qml  blur.qml  emboss.qml  empty.qml  gamma.qml  inversion.qml  mirror.qml  orderedDithering.qml  ordered_dithering.qml  qmldir  roberts.qml  rotate.qml  sepia.qml  sharp.qml  sobels.qml
qml/forms/: ImagePreview.qml  ImageViewer.qml  about.qml  qmldir
src/: main.cpp
